--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes blog",
   "type": "module",
-  "version": "4.17.4",
+  "version": "4.18.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/antoniwan/notes.git"
@@ -25,7 +25,10 @@
     "performance": "npm run build && npm run analyze",
     "audit-performance": "npm run build && npx lighthouse http://localhost:4321 --only-categories=performance --output=json --output-path=./performance-audit.json",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "check": "astro check"
   },
   "dependencies": {
     "@astrojs/mdx": "4.3.13",
@@ -49,7 +52,10 @@
     "@astrojs/check": "0.9.6",
     "@tailwindcss/forms": "^0.5.11",
     "@tailwindcss/typography": "^0.5.19",
+    "@typescript-eslint/parser": "^8.56.1",
     "autoprefixer": "^10.4.24",
+    "eslint": "^10.0.2",
+    "eslint-plugin-astro": "^1.6.0",
     "postcss": "^8.5.6",
     "prettier": "^3.8.1",
     "prettier-plugin-astro": "^0.14.1",
