Update version to 4.18.1: Clean up whitespace in various files, enhance README formatting, and improve ESLint configuration for better code quality and maintainability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,11 @@ jobs:
       - name: Run format check
         run: pnpm run format:check
 
+      - name: Run Astro check
+        run: pnpm run check
+
       - name: Run ESLint
         run: pnpm run lint
 
       - name: Build project
         run: pnpm run build
-
