--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes blog",
   "type": "module",
-  "version": "4.24.0",
+  "version": "4.25.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/antoniwan/notes.git"
@@ -17,8 +17,8 @@
     "generate-favicons": "node scripts/generate-favicons.js",
     "analyze": "astro build && npx @astrojs/vercel/static-build",
     "lighthouse": "npx lighthouse http://localhost:4321 --output=html --output-path=./lighthouse-report.html",
-    "performance": "npm run build && npm run analyze",
-    "audit-performance": "npm run build && npx lighthouse http://localhost:4321 --only-categories=performance --output=json --output-path=./performance-audit.json",
+    "performance": "pnpm run build && pnpm run analyze",
+    "audit-performance": "pnpm run build && npx lighthouse http://localhost:4321 --only-categories=performance --output=json --output-path=./performance-audit.json",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "lint": "eslint .",
@@ -35,7 +35,6 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "astro": "5.17.3",
-    "compromise": "^14.14.5",
     "date-fns": "^4.1.0",
     "js-yaml": "^4.1.1",
     "mdast-util-to-string": "^4.0.0",
