--- a/package.json
+++ b/package.json
@@ -57,5 +57,15 @@
     "tailwindcss": "^3.4.19",
     "terser": "^5.46.0",
     "typescript": "^5.9.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "tar": "7.5.8",
+      "minimatch": "9.0.7",
+      "fast-xml-parser": "5.3.8",
+      "ajv": "6.14.0",
+      "rollup": "4.59.0",
+      "devalue": "5.6.3"
+    }
   }
 }
